주피터 로또번호

--- a/jupyter/보행자전용도로폭 구하깅.ipynb
+++ b/jupyter/보행자전용도로폭 구하깅.ipynb
@@ -29,15 +29,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 1,
    "id": "f4bd3caa",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "보행자전용도로폭 27556.700000000004\n"
+     "ename": "NameError",
+     "evalue": "name 'data_list' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m poak_list \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m n \u001b[38;5;129;01min\u001b[39;00m \u001b[43mdata_list\u001b[49m :\n\u001b[0;32m      3\u001b[0m     poak \u001b[38;5;241m=\u001b[39m n[poak_index]\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      4\u001b[0m     poak_list\u001b[38;5;241m.\u001b[39mappend(poak[\u001b[38;5;241m0\u001b[39m])\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'data_list' is not defined"
      ]
     }
    ],
