--- a/jupyter/이상현로또.ipynb
+++ b/jupyter/이상현로또.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 12,
    "id": "7edc5fc0",
    "metadata": {},
    "outputs": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 6,
    "id": "69349657",
    "metadata": {},
    "outputs": [
@@ -1165,8 +1165,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "b048af67",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'csv_data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[11], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(\u001b[43mcsv_data\u001b[49m)):\n\u001b[0;32m      2\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(csv_data[i])):\n\u001b[0;32m      3\u001b[0m         csv_data[i][j]\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mint\u001b[39m(csv_data[i][j])\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'csv_data' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(len(csv_data)):\n",
+    "    for j in range(len(csv_data[i])):\n",
+    "        csv_data[i][j]=int(csv_data[i][j])\n",
+    "print(csv_dat[:3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce110fd9",
    "metadata": {},
    "outputs": [],
    "source": []
