--- a/jupyter/전국로컬푸드.ipynb
+++ b/jupyter/전국로컬푸드.ipynb
@@ -9,7 +9,8 @@
     "* 인기품목 top10(품목별 카운트)\n",
     "* dictionary 작성 : {군단위 지역명: [품목명]}\n",
     "* dictionary 작성 : {품목 : [군단위 지역명]}\n",
-    "* jupyter note 업로드 : 이름_로컬푸드jpynb"
+    "* jupyter note 업로드 : 이름_로컬푸드jpynb\n",
+    "* 192.168.2.101:8000/upload\n"
    ]
   },
   {
@@ -57,23 +58,11 @@
     "        ret_list.append(s[start_index:])\n",
     "    return ret_list\n",
     "def my_split3(s): # 외 없애기\n",
-    "    block_start = False\n",
-    "    start_index = 0\n",
-    "    ret_list=[]\n",
-    "    for i, c in enumerate(s):\n",
-    "        if block_start==False:\n",
-    "            if c=='외':\n",
-    "                ret_list.append(s[start_index:i])\n",
-    "                start_index=i+1\n",
-    "            elif c=='\"':\n",
-    "                block_start=True\n",
-    "                start_index = i\n",
-    "        else:\n",
-    "            if c=='\"':\n",
-    "                block_start=False\n",
-    "    if s[-1]!='외':\n",
-    "        ret_list.append(s[start_index:])\n",
-    "    return ret_list"
+    "    for i in s :\n",
+    "        if('외' in s) :\n",
+    "            print('외가 있음')\n",
+    "        else : \n",
+    "            print('외가 없음')"
    ]
   },
   {
@@ -146,12 +135,14 @@
     "            data_list_country_nodot.append((i.split(' '))[1])\n",
     "            data_list_name_noplus_nodot.append(data_list_name_noplus[n])\n",
     "#d=dict(zip(data_list_country_nodot,data_list_name_noplus_nodot))\n",
-    "#print(d)"
+    "#print(d)\n",
+    "data_list_name2_nodot_setlist = []\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "4dbf610d",
    "metadata": {},
    "outputs": [
@@ -159,9 +150,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['아산시', '수원시', '군산시', '오산시', '함양군', '옥천군', '화성시', '원주시', '완주군']\n",
-      "지역명 : 수원시\n",
-      "{'화분', '콩', '고추장', '딸기', '청양고추', '천연비누', '인삼', '무순', '어린잎새싹', '사과', '발효식초', '된장', '표고버섯', '발효액', '포도(캠벨)', '오이', '고추', '무화과', '느타리', '꿀비누', '재생휴지', '꿀', '간장', '토마토', '상추'}\n"
+      "['오산시', '수원시', '화성시', '원주시', '옥천군', '완주군', '함양군', '군산시', '아산시']\n"
      ]
     }
    ],
@@ -190,6 +179,25 @@
     "a = input('지역명 : ')\n",
     "print(d[a])\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "da2167d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(len(data_list_name_noplus_set_list)) :\n",
+    "    data_list_name2_nodot_setlist.append([]) #리스트 안에 도시 개수만큼 리스트 만들기\n",
+    "print(data_list_name2_nodot_setlist)\n",
+    "print(data_list_name_noplus_set_list)\n",
+    "e=dict(zip(data_list_name_nodot_setlist,data_list_country_nodot_setlist))\n",
+    "b = str\n",
+    "print(data_list_country_nodot_setlist)\n",
+    "b = input('지역명 : ')\n",
+    "print(e[b])\n",
+    "# 포기.."
+   ]
   }
  ],
  "metadata": {
@@ -208,7 +216,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
