판다스 개사기야

--- a/jupyter/day16_횡단보도.ipynb
+++ b/jupyter/day16_횡단보도.ipynb
@@ -119,7 +119,7 @@
     "list_in_list= []\n",
     "list_in_list2= []\n",
     "list_in_list3= []\n",
-    "with open('전국횡단보도표준데이터.csv') as f:\n",
+    "with open('전국횡단보도표준데이터.csv',encoding = 'cp-949') as f:\n",
     "    for i in f :\n",
     "        data_list.append(my_split(i))\n",
     "        \n",
