파이썬 normalization , standazation

--- a/jupyter/Day20_전국일방통행도로표준데이터 pandas 데이터 전처리(강사님).ipynb
+++ b/jupyter/Day20_전국일방통행도로표준데이터 pandas 데이터 전처리(강사님).ipynb
@@ -17,13 +17,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 12,
    "id": "34db1d01",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import pickle\n",
     "\n",
     "pd_raw = pd.read_csv('전국일방통행도로표준데이터.csv',encoding='cp949')\n",
     "\n",
@@ -33,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 2,
    "id": "a1edcc6f",
    "metadata": {},
    "outputs": [
@@ -67,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 3,
    "id": "9b9c69c1",
    "metadata": {},
    "outputs": [
@@ -104,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 4,
    "id": "80ea64ce",
    "metadata": {},
    "outputs": [
@@ -130,7 +131,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ITPS\\AppData\\Local\\Temp\\ipykernel_10304\\1422881139.py:22: SettingWithCopyWarning: \n",
+      "C:\\Users\\ITPS\\AppData\\Local\\Temp\\ipykernel_8828\\1422881139.py:22: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -168,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 5,
    "id": "9c614580",
    "metadata": {},
    "outputs": [
@@ -207,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 6,
    "id": "b9cc9319",
    "metadata": {},
    "outputs": [
@@ -215,27 +216,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[5.  9.  4.  6.  7.5 8.  7.  nan 3.5 5.5 3.  4.5 6.5 2.5 7.1 6.3 3.7 8.5\n",
-      " 8.2 2.  4.9 4.6 2.8 4.8 5.6 8.1 6.4 4.1 6.6 5.7 4.7 4.3 3.8 7.4 5.3 5.8\n",
-      " 4.2 3.2 4.4 5.1 5.9 3.9 5.4 3.4 7.3 3.3 7.6 8.4 5.2 7.8 6.2 6.7 8.8 7.7\n",
-      " 8.3 6.1 6.9 6.8]\n",
-      "True\n",
-      "count    2039.000000\n",
-      "mean        5.544973\n",
-      "std         1.535591\n",
+      "[ 5.   9.   4.   6.   7.5  8.   7.  12.  15.  16.   3.5  5.5  3.  10.\n",
+      " 14.   4.5  6.5 15.5  2.5  7.1  9.8  9.7  6.3  3.7  8.5  8.2 14.6  2.\n",
+      "  4.9  4.6  2.8  4.8  5.6  8.1  6.4  4.1  6.6  5.7  4.7  4.3  3.8  9.1\n",
+      "  7.4  5.3  5.8  4.2 17.  13.5 24.  11.   9.5 22.  19.   3.2  4.4  5.1\n",
+      "  5.9  3.9 32.   5.4  3.4 18.   7.3  3.3 13.   7.6  8.4  5.2  7.8  6.2\n",
+      "  6.7  8.8  7.7  8.3  6.1  6.9  6.8]\n",
+      "False\n",
+      "count    2159.000000\n",
+      "mean        5.917508\n",
+      "std         2.297448\n",
       "min         2.000000\n",
       "25%         4.000000\n",
       "50%         6.000000\n",
-      "75%         6.000000\n",
-      "max         9.000000\n",
+      "75%         7.000000\n",
+      "max        32.000000\n",
       "Name: 도로폭, dtype: float64\n",
-      "1.0 9.0\n",
-      "False    2159\n",
+      "-0.5 11.5\n",
+      "False    2104\n",
+      "True       55\n",
       "Name: 도로폭, dtype: int64\n",
-      "[5.  9.  4.  6.  7.5 8.  7.  nan 3.5 5.5 3.  4.5 6.5 2.5 7.1 6.3 3.7 8.5\n",
-      " 8.2 2.  4.9 4.6 2.8 4.8 5.6 8.1 6.4 4.1 6.6 5.7 4.7 4.3 3.8 7.4 5.3 5.8\n",
-      " 4.2 3.2 4.4 5.1 5.9 3.9 5.4 3.4 7.3 3.3 7.6 8.4 5.2 7.8 6.2 6.7 8.8 7.7\n",
-      " 8.3 6.1 6.9 6.8]\n",
+      "[ 5.   9.   4.   6.   7.5  8.   7.   nan  3.5  5.5  3.  10.   4.5  6.5\n",
+      "  2.5  7.1  9.8  9.7  6.3  3.7  8.5  8.2  2.   4.9  4.6  2.8  4.8  5.6\n",
+      "  8.1  6.4  4.1  6.6  5.7  4.7  4.3  3.8  9.1  7.4  5.3  5.8  4.2 11.\n",
+      "  9.5  3.2  4.4  5.1  5.9  3.9  5.4  3.4  7.3  3.3  7.6  8.4  5.2  7.8\n",
+      "  6.2  6.7  8.8  7.7  8.3  6.1  6.9  6.8]\n",
       "True\n"
      ]
     }
@@ -264,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 7,
    "id": "19493976",
    "metadata": {},
    "outputs": [
@@ -272,12 +277,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 1.  2.  4.  3.  5. nan]\n",
+      "[ 1.  2.  4.  3.  5. nan 60.]\n",
       "True\n",
-      "False    2157\n",
-      "True        2\n",
+      "False    2158\n",
+      "True        1\n",
       "Name: 도로차로수, dtype: int64\n",
-      "False    2159\n",
+      "False    2158\n",
+      "True        1\n",
       "Name: 도로차로수, dtype: int64\n",
       "[ 1.  2.  4.  3.  5. nan]\n",
       "True\n"
@@ -306,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 8,
    "id": "7008e2cf",
    "metadata": {},
    "outputs": [
@@ -314,9 +320,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Y' 'N' nan]\n",
-      "True\n",
-      "False    2159\n",
+      "['Y' 'N' ' ']\n",
+      "False\n",
+      "False    2158\n",
+      "True        1\n",
       "Name: 보차분리여부, dtype: int64\n"
      ]
     }
@@ -336,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 9,
    "id": "12eaf47d",
    "metadata": {},
    "outputs": [
@@ -345,7 +352,7 @@
      "output_type": "stream",
      "text": [
       "(2159, 6)\n",
-      "(2038, 6)\n"
+      "(2103, 6)\n"
      ]
     }
    ],
@@ -357,11 +364,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "c64b953c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ITPS\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\core\\internals\\blocks.py:2323: RuntimeWarning: invalid value encountered in cast\n",
+      "  values = values.astype(str)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#csv\n",
+    "pd_data.to_csv('전국일방통행도로표준데이터_pass1.csv')\n",
+    "\n",
+    "#pickle\n",
+    "with open('전국일방통행도로표준데이터_pass1.pickle','wb') as f:\n",
+    "    pickle.dump(pd_data,f)"
+   ]
   }
  ],
  "metadata": {
