--- a/jupyter/Day25_seaborn.ipynb
+++ b/jupyter/Day25_seaborn.ipynb
@@ -41,7 +41,7 @@
     "import seaborn as sns\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n"
    ]
   },
   {
